src/cimgui_ext/include/cimplot.h

typedef int ImAxis;
typedef int ImPlotCol;
typedef int ImPlotColormap;
typedef int ImPlotColormapScaleFlags;
typedef int ImPlotCond;
typedef int ImPlotDragToolFlags;
typedef int ImPlotFlags;
typedef int ImPlotItemFlags;
typedef int ImPlotMarker;
typedef int ImPlotSubplotFlags;
enum ImPlotCol_
{
    ImPlotCol_FrameBg = 0,
    ImPlotCol_PlotBg = 1,
    ImPlotCol_PlotBorder = 2,
    ImPlotCol_LegendBg = 3,
    ImPlotCol_LegendBorder = 4,
    ImPlotCol_LegendText = 5,
    ImPlotCol_TitleText = 6,
    ImPlotCol_InlayText = 7,
    ImPlotCol_AxisText = 8,
    ImPlotCol_AxisGrid = 9,
    ImPlotCol_AxisTick = 10,
    ImPlotCol_AxisBg = 11,
    ImPlotCol_AxisBgHovered = 12,
    ImPlotCol_AxisBgActive = 13,
    ImPlotCol_Selection = 14,
    ImPlotCol_Crosshairs = 15,
    ImPlotCol_COUNT = 16,
};
struct ImPlotInputMap
{
    ImGuiMouseButton Pan;
    int PanMod;
    ImGuiMouseButton Fit;
    ImGuiMouseButton Select;
    ImGuiMouseButton SelectCancel;
    int SelectMod;
    int SelectHorzMod;
    int SelectVertMod;
    ImGuiMouseButton Menu;
    int OverrideMod;
    int ZoomMod;
    float ZoomRate;
};
struct ImPlotPoint
{
    double x;
    double y;
};
struct ImPlotRange
{
    double Min;
    double Max;
};
struct ImPlotRect
{
    ImPlotRange X;
    ImPlotRange Y;
};
struct ImPlotSpec
{
    ImVec4 LineColor;
    float LineWeight;
    ImVec4 FillColor;
    float FillAlpha;
    ImPlotMarker Marker;
    float MarkerSize;
    ImVec4 MarkerLineColor;
    ImVec4 MarkerFillColor;
    float Size;
    int Offset;
    int Stride;
    ImPlotItemFlags Flags;
};
struct ImPlotStyle
{
    ImVec2 PlotDefaultSize;
    ImVec2 PlotMinSize;
    float PlotBorderSize;
    float MinorAlpha;
    ImVec2 MajorTickLen;
    ImVec2 MinorTickLen;
    ImVec2 MajorTickSize;
    ImVec2 MinorTickSize;
    ImVec2 MajorGridSize;
    ImVec2 MinorGridSize;
    ImVec2 PlotPadding;
    ImVec2 LabelPadding;
    ImVec2 LegendPadding;
    ImVec2 LegendInnerPadding;
    ImVec2 LegendSpacing;
    ImVec2 MousePosPadding;
    ImVec2 AnnotationPadding;
    ImVec2 FitPadding;
    float DigitalPadding;
    float DigitalSpacing;
    ImVec4 Colors[ImPlotCol_COUNT];
    ImPlotColormap Colormap;
    bool UseLocalTime;
    bool UseISO8601;
    bool Use24HourClock;
};
typedef struct ImPlotContext ImPlotContext;
typedef struct ImPlotInputMap ImPlotInputMap;
typedef struct ImPlotPoint ImPlotPoint;
typedef struct ImPlotRange ImPlotRange;
typedef struct ImPlotRect ImPlotRect;
typedef struct ImPlotSpec ImPlotSpec;
typedef struct ImPlotStyle ImPlotStyle;
typedef ImPlotPoint (*ImPlotGetter)(int idx, void* user_data);
CIMGUI_API ImPlotColormap ImPlot_AddColormap_Vec4Ptr(const char* name,const ImVec4* cols,int size,bool qual);
CIMGUI_API ImPlotColormap ImPlot_AddColormap_U32Ptr(const char* name,const ImU32* cols,int size,bool qual);
CIMGUI_API void ImPlot_Annotation_Bool(double x,double y,ImVec4 col,ImVec2 pix_offset,bool clamp,bool round);
CIMGUI_API bool ImPlot_BeginAlignedPlots(const char* group_id,bool vertical);
CIMGUI_API bool ImPlot_BeginDragDropSourceAxis(ImAxis axis,ImGuiDragDropFlags flags);
CIMGUI_API bool ImPlot_BeginDragDropSourceItem(const char* label_id,ImGuiDragDropFlags flags);
CIMGUI_API bool ImPlot_BeginDragDropSourcePlot(ImGuiDragDropFlags flags);
CIMGUI_API bool ImPlot_BeginDragDropTargetAxis(ImAxis axis);
CIMGUI_API bool ImPlot_BeginDragDropTargetLegend();
CIMGUI_API bool ImPlot_BeginDragDropTargetPlot();
CIMGUI_API bool ImPlot_BeginLegendPopup(const char* label_id,ImGuiMouseButton mouse_button);
CIMGUI_API bool ImPlot_BeginPlot(const char* title_id,ImVec2 size,ImPlotFlags flags);
CIMGUI_API bool ImPlot_BeginSubplots(const char* title_id,int rows,int cols,ImVec2 size,ImPlotSubplotFlags flags,float* row_ratios,float* col_ratios);
CIMGUI_API void ImPlot_BustColorCache(const char* plot_title_id);
CIMGUI_API void ImPlot_CancelPlotSelection();
CIMGUI_API bool ImPlot_ColormapButton(const char* label,ImVec2 size,ImPlotColormap cmap);
CIMGUI_API void ImPlot_ColormapIcon(ImPlotColormap cmap);
CIMGUI_API void ImPlot_ColormapScale(const char* label,double scale_min,double scale_max,ImVec2 size,const char* format,ImPlotColormapScaleFlags flags,ImPlotColormap cmap);
CIMGUI_API bool ImPlot_ColormapSlider(const char* label,float* t,ImVec4* out,const char* format,ImPlotColormap cmap);
CIMGUI_API ImPlotContext* ImPlot_CreateContext();
CIMGUI_API void ImPlot_DestroyContext(ImPlotContext* ctx);
CIMGUI_API bool ImPlot_DragLineX(int id,double* x,ImVec4 col,float thickness,ImPlotDragToolFlags flags,bool* out_clicked,bool* out_hovered,bool* out_held);
CIMGUI_API bool ImPlot_DragLineY(int id,double* y,ImVec4 col,float thickness,ImPlotDragToolFlags flags,bool* out_clicked,bool* out_hovered,bool* out_held);
CIMGUI_API bool ImPlot_DragPoint(int id,double* x,double* y,ImVec4 col,float size,ImPlotDragToolFlags flags,bool* out_clicked,bool* out_hovered,bool* out_held);
CIMGUI_API bool ImPlot_DragRect(int id,double* x1,double* y1,double* x2,double* y2,ImVec4 col,ImPlotDragToolFlags flags,bool* out_clicked,bool* out_hovered,bool* out_held);
CIMGUI_API void ImPlot_EndAlignedPlots();
CIMGUI_API void ImPlot_EndDragDropSource();
CIMGUI_API void ImPlot_EndDragDropTarget();
CIMGUI_API void ImPlot_EndLegendPopup();
CIMGUI_API void ImPlot_EndPlot();
CIMGUI_API void ImPlot_EndSubplots();
CIMGUI_API ImVec4 ImPlot_GetColormapColor(int idx,ImPlotColormap cmap);
CIMGUI_API int ImPlot_GetColormapCount();
CIMGUI_API ImPlotColormap ImPlot_GetColormapIndex(const char* name);
CIMGUI_API const char* ImPlot_GetColormapName(ImPlotColormap cmap);
CIMGUI_API int ImPlot_GetColormapSize(ImPlotColormap cmap);
CIMGUI_API ImPlotContext* ImPlot_GetCurrentContext();
CIMGUI_API ImPlotInputMap* ImPlot_GetInputMap();
CIMGUI_API ImVec4 ImPlot_GetLastItemColor();
CIMGUI_API const char* ImPlot_GetMarkerName(ImPlotMarker idx);
CIMGUI_API ImDrawList* ImPlot_GetPlotDrawList();
CIMGUI_API ImPlotRect ImPlot_GetPlotLimits(ImAxis x_axis,ImAxis y_axis);
CIMGUI_API ImPlotPoint ImPlot_GetPlotMousePos(ImAxis x_axis,ImAxis y_axis);
CIMGUI_API ImVec2 ImPlot_GetPlotPos();
CIMGUI_API ImPlotRect ImPlot_GetPlotSelection(ImAxis x_axis,ImAxis y_axis);
CIMGUI_API ImVec2 ImPlot_GetPlotSize();
CIMGUI_API ImPlotStyle* ImPlot_GetStyle();
CIMGUI_API const char* ImPlot_GetStyleColorName(ImPlotCol idx);
CIMGUI_API void ImPlot_HideNextItem(bool hidden,ImPlotCond cond);
CIMGUI_API bool ImPlot_IsAxisHovered(ImAxis axis);
CIMGUI_API bool ImPlot_IsLegendEntryHovered(const char* label_id);
CIMGUI_API bool ImPlot_IsPlotHovered();
CIMGUI_API bool ImPlot_IsPlotSelected();
CIMGUI_API bool ImPlot_IsSubplotsHovered();
CIMGUI_API void ImPlot_ItemIcon_Vec4(ImVec4 col);
CIMGUI_API void ImPlot_ItemIcon_U32(ImU32 col);
CIMGUI_API void ImPlot_MapInputDefault(ImPlotInputMap* dst);
CIMGUI_API void ImPlot_MapInputReverse(ImPlotInputMap* dst);
CIMGUI_API ImVec4 ImPlot_NextColormapColor();
CIMGUI_API ImPlotMarker ImPlot_NextMarker();
CIMGUI_API ImPlotPoint ImPlot_PixelsToPlot_Vec2(ImVec2 pix,ImAxis x_axis,ImAxis y_axis);
CIMGUI_API ImPlotPoint ImPlot_PixelsToPlot_Float(float x,float y,ImAxis x_axis,ImAxis y_axis);
CIMGUI_API void ImPlot_PlotBarGroups_FloatPtr(const char* const label_ids[],const float* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_doublePtr(const char* const label_ids[],const double* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_S16Ptr(const char* const label_ids[],const ImS16* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_U16Ptr(const char* const label_ids[],const ImU16* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_S32Ptr(const char* const label_ids[],const ImS32* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_U32Ptr(const char* const label_ids[],const ImU32* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_S64Ptr(const char* const label_ids[],const ImS64* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarGroups_U64Ptr(const char* const label_ids[],const ImU64* values,int item_count,int group_count,double group_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_FloatPtrInt(const char* label_id,const float* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_doublePtrInt(const char* label_id,const double* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_S16PtrInt(const char* label_id,const ImS16* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_U16PtrInt(const char* label_id,const ImU16* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_S32PtrInt(const char* label_id,const ImS32* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_U32PtrInt(const char* label_id,const ImU32* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_S64PtrInt(const char* label_id,const ImS64* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_U64PtrInt(const char* label_id,const ImU64* values,int count,double bar_size,double shift,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_FloatPtrFloatPtr(const char* label_id,const float* xs,const float* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_doublePtrdoublePtr(const char* label_id,const double* xs,const double* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_S16PtrS16Ptr(const char* label_id,const ImS16* xs,const ImS16* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_U16PtrU16Ptr(const char* label_id,const ImU16* xs,const ImU16* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_S32PtrS32Ptr(const char* label_id,const ImS32* xs,const ImS32* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_U32PtrU32Ptr(const char* label_id,const ImU32* xs,const ImU32* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_S64PtrS64Ptr(const char* label_id,const ImS64* xs,const ImS64* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBars_U64PtrU64Ptr(const char* label_id,const ImU64* xs,const ImU64* ys,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBarsG(const char* label_id,ImPlotGetter getter,void* data,int count,double bar_size,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBubbles_FloatPtrFloatPtrInt(const char* label_id,const float* values,const float* szs,int count,double xscale,double xstart,const ImPlotSpec spec);
CIMGUI_API void ImPlot_PlotBubbles_doublePtrdoublePtrInt(const char* label_id,const double* values,const double* szs,int count,double xscale,double xstart,const ImPlotSpec spec);