src/Editor/LibreLancer.ImUI/ImPlot/ImPlotNative.cs

// <auto-generated/>
#nullable disable
using System;
using System.Numerics;
using System.Runtime.InteropServices;
using ImGuiNET;

namespace LibreLancer.ImUI.ImPlot;

static unsafe class ImPlotNative
{
    [DllImport("cimgui")]
    public static extern ImPlotColormap ImPlot_AddColormap_Vec4Ptr(byte* name,Vector4* cols,int size,byte qual);

    [DllImport("cimgui")]
    public static extern ImPlotColormap ImPlot_AddColormap_U32Ptr(byte* name,uint* cols,int size,byte qual);

    [DllImport("cimgui")]
    public static extern void ImPlot_Annotation_Bool(double x,double y,Vector4 col,Vector2 pix_offset,byte clamp,byte round);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginAlignedPlots(byte* group_id,byte vertical);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginDragDropSourceAxis(ImAxis axis,ImGuiDragDropFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginDragDropSourceItem(byte* label_id,ImGuiDragDropFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginDragDropSourcePlot(ImGuiDragDropFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginDragDropTargetAxis(ImAxis axis);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginDragDropTargetLegend();

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginDragDropTargetPlot();

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginLegendPopup(byte* label_id,ImGuiMouseButton mouse_button);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginPlot(byte* title_id,Vector2 size,ImPlotFlags flags);

    [DllImport("cimgui")]
    public static extern byte ImPlot_BeginSubplots(byte* title_id,int rows,int cols,Vector2 size,ImPlotSubplotFlags flags,float* row_ratios,float* col_ratios);

    [DllImport("cimgui")]
    public static extern void ImPlot_BustColorCache(byte* plot_title_id);

    [DllImport("cimgui")]
    public static extern void ImPlot_CancelPlotSelection();

    [DllImport("cimgui")]
    public static extern byte ImPlot_ColormapButton(byte* label,Vector2 size,ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern void ImPlot_ColormapIcon(ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern void ImPlot_ColormapScale(byte* label,double scale_min,double scale_max,Vector2 size,byte* format,ImPlotColormapScaleFlags flags,ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern byte ImPlot_ColormapSlider(byte* label,float* t,Vector4* output,byte* format,ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern IntPtr ImPlot_CreateContext();

    [DllImport("cimgui")]
    public static extern void ImPlot_DestroyContext(IntPtr ctx);

    [DllImport("cimgui")]
    public static extern byte ImPlot_DragLineX(int id,double* x,Vector4 col,float thickness,ImPlotDragToolFlags flags,byte* out_clicked,byte* out_hovered,byte* out_held);

    [DllImport("cimgui")]
    public static extern byte ImPlot_DragLineY(int id,double* y,Vector4 col,float thickness,ImPlotDragToolFlags flags,byte* out_clicked,byte* out_hovered,byte* out_held);

    [DllImport("cimgui")]
    public static extern byte ImPlot_DragPoint(int id,double* x,double* y,Vector4 col,float size,ImPlotDragToolFlags flags,byte* out_clicked,byte* out_hovered,byte* out_held);

    [DllImport("cimgui")]
    public static extern byte ImPlot_DragRect(int id,double* x1,double* y1,double* x2,double* y2,Vector4 col,ImPlotDragToolFlags flags,byte* out_clicked,byte* out_hovered,byte* out_held);

    [DllImport("cimgui")]
    public static extern void ImPlot_EndAlignedPlots();

    [DllImport("cimgui")]
    public static extern void ImPlot_EndDragDropSource();

    [DllImport("cimgui")]
    public static extern void ImPlot_EndDragDropTarget();

    [DllImport("cimgui")]
    public static extern void ImPlot_EndLegendPopup();

    [DllImport("cimgui")]
    public static extern void ImPlot_EndPlot();

    [DllImport("cimgui")]
    public static extern void ImPlot_EndSubplots();

    [DllImport("cimgui")]
    public static extern Vector4 ImPlot_GetColormapColor(int idx,ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern int ImPlot_GetColormapCount();

    [DllImport("cimgui")]
    public static extern ImPlotColormap ImPlot_GetColormapIndex(byte* name);

    [DllImport("cimgui")]
    public static extern byte* ImPlot_GetColormapName(ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern int ImPlot_GetColormapSize(ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern IntPtr ImPlot_GetCurrentContext();

    [DllImport("cimgui")]
    public static extern ImPlotInputMap* ImPlot_GetInputMap();

    [DllImport("cimgui")]
    public static extern Vector4 ImPlot_GetLastItemColor();

    [DllImport("cimgui")]
    public static extern byte* ImPlot_GetMarkerName(ImPlotMarker idx);

    [DllImport("cimgui")]
    public static extern ImDrawList* ImPlot_GetPlotDrawList();

    [DllImport("cimgui")]
    public static extern ImPlotRect ImPlot_GetPlotLimits(ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern ImPlotPoint ImPlot_GetPlotMousePos(ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern Vector2 ImPlot_GetPlotPos();

    [DllImport("cimgui")]
    public static extern ImPlotRect ImPlot_GetPlotSelection(ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern Vector2 ImPlot_GetPlotSize();

    [DllImport("cimgui")]
    public static extern ImPlotStyle* ImPlot_GetStyle();

    [DllImport("cimgui")]
    public static extern byte* ImPlot_GetStyleColorName(ImPlotCol idx);

    [DllImport("cimgui")]
    public static extern void ImPlot_HideNextItem(byte hidden,ImPlotCond cond);

    [DllImport("cimgui")]
    public static extern byte ImPlot_IsAxisHovered(ImAxis axis);

    [DllImport("cimgui")]
    public static extern byte ImPlot_IsLegendEntryHovered(byte* label_id);

    [DllImport("cimgui")]
    public static extern byte ImPlot_IsPlotHovered();

    [DllImport("cimgui")]
    public static extern byte ImPlot_IsPlotSelected();

    [DllImport("cimgui")]
    public static extern byte ImPlot_IsSubplotsHovered();

    [DllImport("cimgui")]
    public static extern void ImPlot_ItemIcon_Vec4(Vector4 col);

    [DllImport("cimgui")]
    public static extern void ImPlot_ItemIcon_U32(uint col);

    [DllImport("cimgui")]
    public static extern void ImPlot_MapInputDefault(ImPlotInputMap* dst);

    [DllImport("cimgui")]
    public static extern void ImPlot_MapInputReverse(ImPlotInputMap* dst);

    [DllImport("cimgui")]
    public static extern Vector4 ImPlot_NextColormapColor();

    [DllImport("cimgui")]
    public static extern ImPlotMarker ImPlot_NextMarker();

    [DllImport("cimgui")]
    public static extern ImPlotPoint ImPlot_PixelsToPlot_Vec2(Vector2 pix,ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern ImPlotPoint ImPlot_PixelsToPlot_Float(float x,float y,ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_FloatPtr(IntPtr label_ids,float* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_doublePtr(IntPtr label_ids,double* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_S16Ptr(IntPtr label_ids,short* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_U16Ptr(IntPtr label_ids,ushort* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_S32Ptr(IntPtr label_ids,int* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_U32Ptr(IntPtr label_ids,uint* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_S64Ptr(IntPtr label_ids,long* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarGroups_U64Ptr(IntPtr label_ids,ulong* values,int item_count,int group_count,double group_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_FloatPtrInt(byte* label_id,float* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_doublePtrInt(byte* label_id,double* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_S16PtrInt(byte* label_id,short* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_U16PtrInt(byte* label_id,ushort* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_S32PtrInt(byte* label_id,int* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_U32PtrInt(byte* label_id,uint* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_S64PtrInt(byte* label_id,long* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_U64PtrInt(byte* label_id,ulong* values,int count,double bar_size,double shift,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_FloatPtrFloatPtr(byte* label_id,float* xs,float* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_doublePtrdoublePtr(byte* label_id,double* xs,double* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_S16PtrS16Ptr(byte* label_id,short* xs,short* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_U16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_S32PtrS32Ptr(byte* label_id,int* xs,int* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_U32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_S64PtrS64Ptr(byte* label_id,long* xs,long* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBars_U64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBarsG(byte* label_id,delegate* unmanaged<int, void*, ImPlotPoint> getter,void* data,int count,double bar_size,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_FloatPtrFloatPtrInt(byte* label_id,float* values,float* szs,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotBubbles_doublePtrdoublePtrInt(byte* label_id,double* values,double* szs,int count,double xscale,double xstart,ImPlotSpec spec);
